@@ -1,9 +1,10 @@
 <!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
 <beans>
     <bean id="manager" class="edu.mcw.rgd.rnacentral.Main">
-        <property name="version" value="RNACentral pipeline   -- build Mar 02, 2023" />
+        <property name="version" value="RNACentral pipeline   -- build Mar 06, 2023" />
         <property name="pipelineName" value="RNACentral" />
         <property name="xdbKeyForRNACentral" value="68" />
         <property name="refSeqMappingFile" value="ftp://ftp.ebi.ac.uk/pub/databases/RNAcentral/current_release/id_mapping/database_mappings/refseq.tsv"/>
+        <property name="rgdMappingFile"    value="ftp://ftp.ebi.ac.uk/pub/databases/RNAcentral/current_release/id_mapping/database_mappings/rgd.tsv"/>
     </bean>
 </beans>
